# tangpa_sdk_client

./: CMakeLists.txt  READEME.md  README.md
config/: config.yaml
data/proto/api_service/common/: CMakeLists.txt  package.xml
data/proto/api_service/common/include/api_service/common/: interfaces_callback.pb.h  interfaces_grpc.grpc.pb.h  interfaces_grpc.pb.h  status.grpc.pb.h
data/proto/api_service/common/proto/: interfaces_callback.proto  interfaces_grpc.proto  interfaces_request_response.proto  service.proto  status.proto
data/proto/api_service/common/source/: interfaces_callback.grpc.pb.cc  interfaces_callback.pb.cc  interfaces_grpc.grpc.pb.cc  interfaces_grpc.pb.cc  interfaces_request_response.grpc.pb.cc  interfaces_request_response.pb.cc  service.grpc.pb.cc  service.pb.cc  status.grpc.pb.cc  status.pb.cc
data/proto/api_service/konka/: CMakeLists.txt  package.xml
data/proto/api_service/konka/include/api_service/konka/: control.pb.h  navigation.pb.h  perception.grpc.pb.h  perception.pb.h  system.pb.h
data/proto/api_service/konka/proto/: control.proto  navigation.proto  perception.proto  system.proto
data/proto/api_service/konka/source/: control.grpc.pb.cc  control.pb.cc  navigation.grpc.pb.cc  navigation.pb.cc  perception.grpc.pb.cc  perception.pb.cc  system.grpc.pb.cc  system.pb.cc
data/proto/api_service/tangpa/: CMakeLists.txt  package.xml
data/proto/api_service/tangpa/include/api_service/tangpa/: control.grpc.pb.h  navigation.grpc.pb.h  navigation.pb.h  perception.pb.h  system.grpc.pb.h  system.pb.h
data/proto/api_service/tangpa/proto/: control.proto  navigation.proto  perception.proto  system.proto
data/proto/api_service/tangpa/source/: control.grpc.pb.cc  control.pb.cc  navigation.grpc.pb.cc  navigation.pb.cc  perception.grpc.pb.cc  perception.pb.cc  system.grpc.pb.cc  system.pb.cc
data/proto/ros2/action_msgs/: GoalInfo.proto  GoalStatusArray.proto
data/proto/ros2/geometry_msgs/: Point.proto  Pose.proto  Quaternion.proto  Vector3.proto
data/proto/ros2/include/ros2/action_msgs/: GoalInfo.pb.h  GoalStatus.pb.h
data/proto/ros2/include/ros2/builtin_interfaces/: Duration.grpc.pb.h  Time.grpc.pb.h  Time.pb.h
data/proto/ros2/include/ros2/diagnostic_msgs/: DiagnosticArray.pb.h  DiagnosticStatus.grpc.pb.h  DiagnosticStatus.pb.h  KeyValue.grpc.pb.h  KeyValue.pb.h
data/proto/ros2/include/ros2/geometry_msgs/: Point.grpc.pb.h  Point.pb.h  Pose.grpc.pb.h  PoseStamped.grpc.pb.h  PoseStamped.pb.h  Quaternion.pb.h  Twist.grpc.pb.h
data/proto/ros2/include/ros2/nav2_msgs/: ActionNavigateToPose.grpc.pb.h  ActionNavigateToPose.pb.h
data/proto/ros2/include/ros2/nav_msgs/: MapMetaData.pb.h
data/proto/ros2/include/ros2/sensor_msgs/: Imu.pb.h  JointState.grpc.pb.h  JointState.pb.h
data/proto/ros2/include/ros2/std_msgs/: Header.grpc.pb.h
data/proto/ros2/include/ros2/unique_identifier_msgs/: UUID.pb.h
data/proto/ros2/nav_msgs/: MapMetaData.proto
data/proto/ros2/proto/action_msgs/: GoalStatus.proto
data/proto/ros2/proto/builtin_interfaces/: Duration.proto  Time.proto
data/proto/ros2/proto/diagnostic_msgs/: DiagnosticArray.proto  DiagnosticStatus.proto  KeyValue.proto
data/proto/ros2/proto/geometry_msgs/: PoseStamped.proto  Twist.proto
data/proto/ros2/proto/nav2_msgs/: ActionNavigateToPose.proto
data/proto/ros2/proto/nav_msgs/: Goals.proto  OccupancyGrid.proto
data/proto/ros2/proto/sensor_msgs/: Joy.proto
data/proto/ros2/proto/std_msgs/: Empty.proto
data/proto/ros2/proto/unique_identifier_msgs/: UUID.proto
data/proto/ros2/sensor_msgs/: Imu.proto  JointState.proto
data/proto/ros2/std_msgs/: Header.proto
data/proto/tangpa_ros2_interfaces/control/cmotor_interface/: Cmotorcommand.proto
data/proto/tangpa_ros2_interfaces/control/nlink_parser/: LinktrackNode7.proto
data/proto/tangpa_ros2_interfaces/proto/control/nlink_parser/: LinktrackNodeframe7.proto
docs/: api_reference.md
examples/: CMakeLists.txt
examples/control_test_gui/: CMakeLists.txt  control_test_gui.cpp
examples/control_test_gui/data/: joy_control.pb.txt  motor_calibration.pb.txt  uwb_config.pb.txt
examples/system_test_gui/: CMakeLists.txt  system_test_gui.cpp
examples/test/: CMakeLists.txt  tangpa_api_benchmark.cpp  tangpa_api_test.cpp
examples/test/data/: motor_control.pb.txt  motor_control_stream.pb.txt  uwb_hardware.pb.txt
examples/tools/: proto_text_parser.hpp
include/chric/common/ConfigManager/: config_manager.h  config_node.h  simple_config_manager.h
include/chric/common/Log/: wlog.hpp
include/chric/common/idl/protobuf/common/: service.grpc.pb.h  service.pb.h  variant.grpc.pb.h  variant.pb.h
include/chric/robot/client/: client_callback_server.h  interfaces_client.h
include/chric/robot/common/: error_code.h  json_convert_util.hpp  marco.h  status.h  success_condition.h  thread_pool.h
include/chric/robot/tangpa/: tangpa_control_api.h  tangpa_system_api.h
lib/aarch64/: libchric_common_log.so.1  libchric_common_log.so.1.0.0  libchric_config_manager.so.1  libchric_config_manager.so.1.0.0  libchric_protobuf_api_service_common.so.1  libchric_protobuf_api_service_common.so.1.0.0  libchric_protobuf_api_service_tangpa.so.1.0.0  libchric_protobuf_common.so.1.0.0  libchric_protobuf_ros2.so.1  libchric_protobuf_ros2.so.1.0.0  libchric_protobuf_tangpa_ros2_interfaces.so.1.0.0  libchric_sdk_client.so.1.0.0.0  libchric_sdk_common.so.1.0.0.0  libchric_tangpa_sdk_module_api.so.1  libchric_tangpa_sdk_module_api.so.1.0.0.0
lib/cmake/tangpa_sdk_client/: tangpa_sdk_clientConfig.cmake
lib/x86_64/: libchric_common_log.so.1.0.0  libchric_config_manager.so.1.0.0  libchric_protobuf_api_service_common.so.1.0.0  libchric_protobuf_api_service_tangpa.so.1  libchric_protobuf_api_service_tangpa.so.1.0.0  libchric_protobuf_common.so.1  libchric_protobuf_common.so.1.0.0  libchric_protobuf_ros2.so.1.0.0  libchric_protobuf_tangpa_ros2_interfaces.so.1  libchric_protobuf_tangpa_ros2_interfaces.so.1.0.0  libchric_sdk_client.so.1  libchric_sdk_client.so.1.0.0.0  libchric_sdk_common.so.1  libchric_sdk_common.so.1.0.0.0  libchric_tangpa_sdk_module_api.so.1.0.0.0
(+103 files in other folders)
